# cmd/server/handler/account.go
@@ -4,17 +4,18 @@ import (
 	"errors"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	acc "github.com/lucaspichi06/xepelin-bank/internal/account"
 	"github.com/lucaspichi06/xepelin-bank/internal/domain"
+	"github.com/lucaspichi06/xepelin-bank/internal/events"
 	custom_errors "github.com/lucaspichi06/xepelin-bank/pkg/errors"
 	"github.com/lucaspichi06/xepelin-bank/pkg/web"
 	"net/http"
-	"strconv"
 )
 
 type Accounts interface {
 	Create() gin.HandlerFunc
-	Read() gin.HandlerFunc
+	GetBalance() gin.HandlerFunc
 }
 
 type account struct {
@@ -34,27 +35,29 @@ func NewAccountHandler(s acc.Service) Accounts {
 // @Accept	json
 // @Produce	json
 // @Param	token	header	string	true	"token"
-// @Param	transaction		body 	domain.Account	true	"Account to create"
+// @Param	transaction		body 	domain.AccountRequest	true	"Account to create"
 // @Success 201	{object}	web.Response
 // @Failure	400	{object}	web.ErrorResponse
 // @Failure	500	{object}	web.ErrorResponse
 // @Router	/accounts	[post]
 func (a account) Create() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var account domain.Account
-		err := c.ShouldBindJSON(&account)
+		var acc domain.AccountRequest
+		err := c.ShouldBindJSON(&acc)
 		if err != nil {
 			web.Failure(c, http.StatusBadRequest, custom_errors.ErrInvalidJSON)
 			return
 		}
 
-		account.ID, err = a.s.Create(account)
+		event := events.NewCreateAccountEvent(acc.Name, a.s)
+
+		newAcc, err := event.Process()
 		if err != nil {
 			web.Failure(c, http.StatusInternalServerError, err)
 			return
 		}
 
-		web.Success(c, http.StatusCreated, account)
+		web.Success(c, http.StatusCreated, newAcc)
 	}
 }
 
@@ -70,15 +73,18 @@ func (a account) Create() gin.HandlerFunc {
 // @Failure	404	{object}	web.ErrorResponse
 // @Failure	500	{object}	web.ErrorResponse
 // @Router	/accounts/{id}/balance	[get]
-func (a account) Read() gin.HandlerFunc {
+func (a account) GetBalance() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		idParam := c.Param("id")
-		id, err := strconv.Atoi(idParam)
+		id, err := uuid.Parse(idParam)
 		if err != nil {
 			web.Failure(c, http.StatusBadRequest, custom_errors.ErrInvalidID)
 			return
 		}
-		res, err := a.s.Read(id)
+
+		event := events.NewBalanceEvent(id, a.s)
+
+		res, err := event.Process()
 		if err != nil {
 			if errors.Is(err, custom_errors.ErrNotFound) {
 				web.Failure(c, http.StatusNotFound, fmt.Errorf("account not found: %v", err))
