# docs/swagger.yaml
@@ -1,12 +1,10 @@
 definitions:
-  domain.Account:
+  domain.AccountRequest:
     properties:
-      balance:
-        type: number
-      id:
-        type: string
       name:
         type: string
+    required:
+    - name
     type: object
   domain.Transaction:
     properties:
@@ -14,12 +12,18 @@ definitions:
         type: string
       amount:
         type: number
-      id:
+      destination_id:
         type: string
       timestamp:
         type: string
+      transaction_id:
+        type: string
       type:
         type: string
+    required:
+    - account_id
+    - amount
+    - type
     type: object
   web.ErrorResponse:
     properties:
@@ -60,7 +64,7 @@ paths:
         name: transaction
         required: true
         schema:
-          $ref: '#/definitions/domain.Account'
+          $ref: '#/definitions/domain.AccountRequest'
       produces:
       - application/json
       responses:
